--- a/snakegame.css
+++ b/snakegame.css
@@ -4,6 +4,13 @@ body {
     justify-content: center;
 }
 
+#score {
+height: 100;
+width: 850;
+margin-top: 100px;
+font-size: 30px;
+}
+
 .canvas {
   margin-top: 200px;
 }
