changed UI/UX in snakegame.html.

--- a/snakegame.css
+++ b/snakegame.css
@@ -1,14 +1,97 @@
-
 body {
-    display: flex;
-    justify-content: center;
+  font-size: 16px;
+  background-color: #ff955f;
+  color: white;
 }
 
-#score {
-margin-top: 100px;
-font-size: 50px;
+.main {
+  width: 60%;
+  margin-top: 70px;
+}
+
+.canvas-col {
+  margin-left: 15%;
+  margin-top: 100px;
+}
+
+.score-text {
+  position: fixed;
+  top: -5.5%;
+  left: 50px;
+  width: 200px;
+}
+
+.javascript-text {
+  color: green;
+}
+
+.equals-green {
+  color: green;
+}
+
+.title-col {
+  width: 500px;
+  margin-bottom: 100px;
+  margin-right: 145px;
+}
+
+.cursorImage {
+  position: fixed;
+  top: 100%;
+
+  height: 120px;
+}
+
+.apple {
+  position: fixed;
+  top: -8%;
+  height: 50px;
+}
+
+p {
+  width: 400px;
+  font-size: 0.8rem;
+}
+
+.points-col {
+  text-align: right;
+}
+
+.score-row {
+  position: fixed;
+
+  margin-top: 30px;
 }
 
 .canvas {
-  margin-top: 200px;
+  position: fixed;
+  height: 600px;
+  left: 50%;
+  top: 10%;
+  width: 800px;
+  transform: translateX(-50%);
+}
+
+.title {
+  position: fixed;
+  left: 200%;
+  top: 80%;
+  width: 800px;
+  transform: translateX(-50%);
+}
+
+.cursor {
+  position: fixed;
+  height: 100px;
+  left: 32%;
+  top: 68%;
+  width: 800px;
+  transform: translateX(-50%);
+}
+
+.otherContainer {
+  height: 1000px;
+  min-width: 1402px;
+  max-width: 1402px;
+  background-color: #ff955f;
 }
